--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -9,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
@@ -28,7 +30,15 @@ section{
     padding: 10px 20px;
     border-radius: 10px
 }
-.top-banner{
+.welcome-to{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+#another-dream{
+    color: crimson;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
