--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@ body{
 h1{
     font-size: 50px;
 }
-#color{
+.edit-font{
+    font-size: 40px;
+}
+.color{
     color: orange;
 }
-section{
+.flex-container{
     display: flex;
     margin-bottom: 150px;
 }
@@ -41,4 +44,29 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 3%;
+    margin-right: 3%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 25px chocolate;
+}
+#border-kaj-left{
+    border-left: 8px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+#border-kaj-right{
+    border-left: 8px solid;
+    border-image: linear-gradient(salmon, tomato);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
